--- a/.github/workflows/sdm845.yml
+++ b/.github/workflows/sdm845.yml
@@ -1,9 +1,11 @@
 name: Build kernel deb packages
 on: 
 #  push:
-#  schedule:
+  schedule:
     # * is a special character in YAML so you have to quote this string
-#    - cron:  '30 5,17 * * *'
+    - cron:  '30 2 * * 6'
+  #手动编译
+  workflow_dispatch:
 
 jobs:
   build:
@@ -31,25 +33,27 @@ jobs:
 
       - name: Build
         run: bash build_action.sh
-
-
-      - name: Artifact
-        uses: actions/upload-artifact@v3
-        with:
-          name: artifact
-          path: ${{ github.workspace }}/artifact/
           
       - name: Compare files
         id: compare
         run: |
           cmp --silent txt/longterm.txt /tmp/longterm.txt && cmp --silent txt/mainline.txt /tmp/mainline.txt && cmp --silent txt/stable.txt /tmp/stable.txt && echo "skip=true" >> $GITHUB_OUTPUT || echo "skip=false" >> $GITHUB_OUTPUT
+
+      - name: Release Firmware
+        uses: softprops/action-gh-release@master
+        with:
+          tag_name: mobian-sdm845
+          files: ${{ github.workspace }}/artifact/*.*
+          body: |
+            这是mobian sdm845内核！
+
       - name: Commit and Push Changes
         env:
-          GITHUB_TOKEN: ${{ secrets.TOKEN }}
+          GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
         if: ${{ steps.compare.outputs.skip != 'true' }}
         run: |
-          git config user.name "XXTXTOP"
-          git config user.email "xxtxtop@gmail.com"
+          git config user.name "bot"
+          git config user.email "bot@github.com"
           ls -al
           pwd
           cp /tmp/mainline.txt  txt/mainline.txt
@@ -62,3 +66,15 @@ jobs:
           git add txt/
           git commit -m "Create file with kernel version"
           git push
+
+      - name: Delete Old Releases
+        uses: dev-drprasad/delete-older-releases@master
+        with:
+          keep_latest: 3
+          delete_tags: true
+
+      - name: Delete Old Workflows
+        uses: Mattraks/delete-workflow-runs@main
+        with:
+          retain_days: 0
+          keep_minimum_runs: 3
