--- a/.github/workflows/sdm845.yml
+++ b/.github/workflows/sdm845.yml
@@ -69,6 +69,8 @@ jobs:
 
       - name: Delete Old Releases
         uses: dev-drprasad/delete-older-releases@master
+        env:
+          GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
         with:
           keep_latest: 3
           delete_tags: true
