--- a/.github/workflows/sdm845.yml
+++ b/.github/workflows/sdm845.yml
@@ -33,7 +33,7 @@ jobs:
 
       - name: Build
         id: build
-        run: bash build_alpine.sh && echo "build=true" >> $GITHUB_OUTPUT || echo "build=false" >> $GITHUB_OUTPUT
+        run: bash build_mobian.sh && echo "build=true" >> $GITHUB_OUTPUT || echo "build=false" >> $GITHUB_OUTPUT
 
       - name: Compare files
         id: compare
@@ -44,10 +44,10 @@ jobs:
         uses: softprops/action-gh-release@master
         if: ${{ steps.compare.outputs.build != 'false' }}
         with:
-          tag_name: alpine-sdm845-$(date "+%Y%m%d%H%M")
+          tag_name: mobian-sdm845-$(date "+%Y%m%d%H%M")
           files: ${{ github.workspace }}/artifact/*.*
           body: |
-            这是 alpine-sdm845 内核！
+            这是 mobian-sdm845 内核！
 
       - name: Commit and Push Changes
         env:
