--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,9 +1,10 @@
 name: Build kernel deb packages
 on: 
-  push:
-  schedule:
+#  push:
+  workflow_dispatch:
+#  schedule:
     # * is a special character in YAML so you have to quote this string
-    - cron:  '30 5,17 * * *'
+    # - cron:  '30 5,17 * * *'
 
 jobs:
   build:
