--- a/.github/workflows/debian.yml
+++ b/.github/workflows/debian.yml
@@ -1,9 +1,9 @@
-name: Build kernel sdm845
+name: Build kernel debian
 on: 
 #  push:
   schedule:
     # * is a special character in YAML so you have to quote this string
-    - cron:  '30 2 * * 6'
+    - cron:  '30 3 * * 6'
   #手动编译
   workflow_dispatch:
 
@@ -33,7 +33,7 @@ jobs:
 
       - name: Build
         id: build
-        run: bash build_mobian.sh && echo "DATE=$(date "+%Y%m%d%H%M")" >> $GITHUB_ENV && echo "build=true" >> $GITHUB_OUTPUT || echo "build=false" >> $GITHUB_OUTPUT
+        run: bash build_debian.sh && echo "DATE=$(date "+%Y%m%d%H%M")" >> $GITHUB_ENV && echo "build=true" >> $GITHUB_OUTPUT || echo "build=false" >> $GITHUB_OUTPUT
 
       - name: Compare files
         id: compare
@@ -44,10 +44,10 @@ jobs:
         uses: softprops/action-gh-release@master
         if: ${{ steps.compare.outputs.build != 'false' }}
         with:
-          tag_name: mobian-sdm845-${{ env.DATE }}
+          tag_name: debian-${{ env.DATE }}
           files: ${{ github.workspace }}/artifact/*.*
           body: |
-            这是 mobian-sdm845 内核！
+            这是 debian 内核！
 
       - name: Commit and Push Changes
         env:
