--- a/.github/workflows/sdm845.yml
+++ b/.github/workflows/sdm845.yml
@@ -1,8 +1,10 @@
 name: Build kernel sdm845
 on: 
 #  push:
+#  	path:
+#  		- 'txt/*'
 #  schedule:
-#    - cron:  '30 2 * * 6'
+#    - cron:  '30 5 * * 6'
   #手动编译
   workflow_dispatch:
 
@@ -34,39 +36,13 @@ jobs:
         id: build
         run: bash build_mobian.sh
 
-      - name: Compare files
-        id: compare
-        run: |
-          cmp --silent txt/longterm.txt /tmp/longterm.txt && cmp --silent txt/mainline.txt /tmp/mainline.txt && cmp --silent txt/stable.txt /tmp/stable.txt && echo "skip=true" >> $GITHUB_OUTPUT || echo "skip=false" >> $GITHUB_OUTPUT
-
       - name: Release Firmware
         uses: softprops/action-gh-release@master
-        if: ${{ steps.compare.outputs.build != 'false' }}
         with:
           tag_name: ${{ env.VERSION }}-mobian-sdm845
           files: ${{ github.workspace }}/artifact/*.*
           body: |
             这是 mobian-sdm845 内核！
-
-      - name: Commit and Push Changes
-        env:
-          GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
-        if: ${{ steps.compare.outputs.skip != 'true' }}
-        run: |
-          git config user.name "bot"
-          git config user.email "bot@github.com"
-          ls -al
-          pwd
-          cp /tmp/mainline.txt  txt/mainline.txt
-          cp /tmp/mainlineurl.txt txt/mainlineurl.txt
-          cp /tmp/stable.txt txt/stable.txt 
-          cp /tmp/stableurl.txt txt/stableurl.txt
-          cp /tmp/longterm.txt txt/longterm.txt
-          cp /tmp/longtermurl.txt txt/longtermurl.txt 
-          git pull
-          git add txt/
-          git commit -m "Create file with kernel version"
-          git push
 
       - name: Delete Old Releases
         uses: dev-drprasad/delete-older-releases@master
@@ -80,4 +56,4 @@ jobs:
         uses: Mattraks/delete-workflow-runs@main
         with:
           retain_days: 0
-          keep_minimum_runs: 3
+          keep_minimum_runs: 7
