--- a/.github/workflows/debian.yml
+++ b/.github/workflows/debian.yml
@@ -2,7 +2,7 @@ name: Build kernel debian
 on: 
   push:
     path:
-      - 'txt/*'
+      - 'txt/*.txt'
 #  schedule:
 #    - cron:  '30 3 * * 6'
   #手动编译
