--- a/.github/workflows/debian.yml
+++ b/.github/workflows/debian.yml
@@ -2,12 +2,10 @@ name: Build kernel debian
 on: 
   workflow_dispatch:
   push:
-    path:
+    paths:
       - 'txt/*'
 #  schedule:
 #    - cron:  '30 3 * * 6'
-  #手动编译
-  workflow_dispatch:
 
 jobs:
   build:
