--- a/.github/workflows/sdm845.yml
+++ b/.github/workflows/sdm845.yml
@@ -25,7 +25,7 @@ jobs:
 
       - name: Checkout
         uses: actions/checkout@main
-      - uses: actions/setup-node@v3
+      - uses: actions/setup-node@main
         with:
           node-version: '20'
       - name: install dep
