--- a/.github/workflows/debian.yml
+++ b/.github/workflows/debian.yml
@@ -2,8 +2,10 @@ name: Build kernel debian
 on: 
   workflow_dispatch:
   push:
+    branches:
+      - '*'
     paths:
-      - '**txt/*.txt'
+      - 'txt/*.txt'
 #  schedule:
 #    - cron:  '30 3 * * 6'
 
